# bachelor_thesis

./: .gitignore  README.md  README.md~
conversion/: CMakeLists.txt  convBundle.cpp  convertForFastfusion.cpp  getcloudfromdepth.cpp  getcloudfromdepthOrigData.cpp  rewritefiles.cpp  scale.cpp  unscale.cpp
fastfusion/: onlinefusionviewer_main.cpp
iOS/calibration/: AppDelegate.h  AppDelegate.mm  Info.plist  ViewController.h  ViewController.mm  main.mm
iOS/calibration.xcodeproj/: project.pbxproj
iOS/calibration.xcodeproj/project.xcworkspace/xcshareddata/: calibration.xccheckout
iOS/calibration.xcodeproj/project.xcworkspace/xcuserdata/worx.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/calibration.xcodeproj/xcuserdata/worx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/calibration.xcodeproj/xcuserdata/worx.xcuserdatad/xcschemes/: calibration.xcscheme  xcschememanagement.plist
iOS/calibration/Base.lproj/: LaunchScreen.xib
iOS/calibrationTests/: Info.plist  calibrationTests.m
presentation/: presentation.pptx
reprojection/: CMakeLists.txt  calibration.cpp  calibration2.cpp  reader.cpp  stereo_calib.cpp
svo/: pipelineBA.cpp
svo/src/: reprojector.cpp
thesis/: Thesis.run.xml  Thesis.tex  discothesis.cls  mathtools.tex  references.bib
